--- a/app/scss/components/button.scss
+++ b/app/scss/components/button.scss
@@ -1,24 +1,20 @@
 .btn {
-  display: flex;
-  font-family: inherit;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  border: none;
+    display: flex;
+    font-family: inherit;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
 }
 
 .btn--primary {
-
+    font-weight: 600;
+    background-color: $redColor;
+    color: $whiteColor;
+    border-radius: 100px;
+    text-transform: uppercase;
 }
 
-.btn-size {
-  &--sm {
-    
-  }
-  &--md {
-
-  }
-  &--lg {
-
-  }
+.shadow-red {
+    box-shadow: 0px 0px 30px #e31e24;
 }
