--- a/app/scss/default/basic.scss
+++ b/app/scss/default/basic.scss
@@ -13,7 +13,7 @@ body {
   font-family:"Montserrat", sans-serif;
   line-height: 1.6;
   color: $whiteColor;
-  // background-color: $whiteColor;
+  background-color: $bgColor;
 
 }
 
